--- a/HAYA/index.html
+++ b/HAYA/index.html
@@ -22,13 +22,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="C:\Users\ASUS\web repo\food-blog-web\fonts">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 
     <!--    <script src="https://use.fontawesome.com/215aeff63a.js"></script> -->
     <title>About</title>
 </head>
 
-<body>
+<body style="font-family:'Playfair Display'">
 
 
     <!--
